// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nodenv default 1`] = `
"{
  \\"options\\": {
    \\"ts\\": false,
    \\"tslint\\": false,
    \\"es\\": false,
    \\"eslint\\": false,
    \\"editorconfig\\": false,
    \\"prettier\\": false,
    \\"stylelint\\": false,
    \\"gitignore\\": false,
    \\"npmrc\\": false,
    \\"readme\\": false,
    \\"githooks\\": false,
    \\"commitlint\\": false,
    \\"nodenv\\": true,
    \\"webpack\\": false,
    \\"install\\": false,
    \\"force\\": true,
    \\"dryRun\\": false,
    \\"mode\\": \\"cli\\"
  },
  \\"mergedFiles\\": {
    \\".node-version\\": {
      \\"override\\": false,
      \\"data\\": \\"8.12.0\\\\n\\"
    }
  }
}"
`;

exports[`nodenv default 2`] = `
"8.12.0
"
`;

exports[`nodenv with-githooks 1`] = `
"{
  \\"options\\": {
    \\"ts\\": false,
    \\"tslint\\": false,
    \\"es\\": false,
    \\"eslint\\": false,
    \\"editorconfig\\": false,
    \\"prettier\\": false,
    \\"stylelint\\": false,
    \\"gitignore\\": false,
    \\"npmrc\\": false,
    \\"readme\\": false,
    \\"githooks\\": true,
    \\"commitlint\\": false,
    \\"nodenv\\": true,
    \\"webpack\\": false,
    \\"install\\": false,
    \\"force\\": true,
    \\"dryRun\\": false,
    \\"mode\\": \\"cli\\"
  },
  \\"mergedFiles\\": {
    \\".node-version\\": {
      \\"override\\": false,
      \\"data\\": \\"8.12.0\\\\n\\"
    },
    \\".huskyrc\\": {
      \\"override\\": false,
      \\"data\\": \\"# ~/.huskyrc\\\\n# Note: it will run in /bin/sh shell\\\\nif command -v nodenv >/dev/null 2>&1; then\\\\n  eval \\\\\\"$(nodenv init -)\\\\\\"\\\\nfi\\"
    }
  }
}"
`;

exports[`nodenv with-githooks 2`] = `
"# ~/.huskyrc
# Note: it will run in /bin/sh shell
if command -v nodenv >/dev/null 2>&1; then
  eval \\"$(nodenv init -)\\"
fi"
`;

exports[`nodenv with-githooks 3`] = `
"8.12.0
"
`;
